# cleanvid

./: README.md  pyproject.toml  setup.cfg
docker/: Dockerfile  README.md  build_docker.sh  cleanvid-docker.sh  run_cleanvid.sh
src/cleanvid/: __init__.py  caselessdictionary.py  cleanvid.py  cleanvid_gui.py  core.py  ffmpeg_runner.py  swears.txt  swears.txt.bak.20260107T182923Z  swears.txt.bak.20260107T184534Z
tools/: import_censorlist.py  import_profane_words.py
